base/cloudflared.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-tunnel
  labels:
    app: cloudflared-tunnel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-tunnel
  template:
    metadata:
      labels:
        app: cloudflared-tunnel
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        imagePullPolicy: Always
        args:
        - "tunnel"
        - "--no-autoupdate"
        - "run"
        - "--token"
        - $(TUNNEL_TOKEN)
      restartPolicy: Always
