base/sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  ports:
  - port: 8989
    protocol: TCP
    targetPort: 8989
    name: webui
  selector:
    run: sonarr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: sonarr
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      run: sonarr
  template:
    metadata:
      labels:
        run: sonarr
    spec:
      securityContext:
        # runAsUser: 1000
        # runAsGroup: 1000
        fsGroup: 1000    
      containers:
      - env:
        - name: TZ
          value: America/Sao_Paulo
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        image: linuxserver/sonarr
        name: sonarr
        ports:
        - containerPort: 8989
          name: webui
        volumeMounts: 
        - mountPath: /config 
          name: htpc-home
          subPath: sonarr
        - mountPath: /tv 
          name: htpc-home
          subPath: media/tv
        - mountPath: /downloads 
          name: htpc-home
          subPath: downloads
