base/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: htpc
spec:
  entryPoints: []
  routes:
  - kind: Rule
    match: PathPrefix(`/`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: jellyfin
      namespace: "htpc"
      port: 8096
  - kind: Rule
    match: PathPrefix(`/sonarr`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: sonarr
      namespace: "htpc"
      port: 8989
  - kind: Rule
    match: PathPrefix(`/radarr`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: radarr
      namespace: "htpc"
      port: 7878
  - kind: Rule
    match: PathPrefix(`/bazarr`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: bazarr
      namespace: "htpc"
      port: 6767
  - kind: Rule
    match: PathPrefix(`/transmission`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: transmission
      namespace: "htpc"
      port: 9091
  - kind: Rule
    match: PathPrefix(`/prowlarr`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: prowlarr
      namespace: "htpc"
      port: 9696
  - kind: Rule
    match: PathPrefix(`/readarr`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: readarr
      namespace: "htpc"
      port: 8787
  - kind: Rule
    match: PathPrefix(`/kavita`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: kavita
      namespace: "htpc"
      port: 5000
  - kind: Rule
    match: PathPrefix(`/lidarr`)
    middlewares: []
    priority: 0
    services:
    - kind: Service
      name: lidarr
      namespace: "htpc"
      port: 8686
  - kind: Rule
    match: PathPrefix(`/whisper`)
    priority: 0
    services:
    - kind: Service
      name: whisper-cpp
      namespace: "htpc"
      port: 8080
