base/qbittorrent.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: webui
  selector:
    run: qbittorrent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: qbittorrent
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      run: qbittorrent
  template:
    metadata:
      labels:
        run: qbittorrent
    spec:
      securityContext:
        # runAsUser: 1000
        # runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: qbittorrent
        image: linuxserver/qbittorrent
        ports:
        - containerPort: 8080
          name: webui
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: htpc-home
          subPath: qbittorrent
        - mountPath: /downloads
          name: htpc-home
          subPath: downloads
        - mountPath: /watch
          name: htpc-home
          subPath: watch
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
    traefik.ingress.kubernetes.io/frontend-entry-points: http
spec:
  rules:
  - http:
      paths:
      - path: /qbittorrent
        backend:
          serviceName: qbittorrent
          servicePort: webui
